# WebSite-GL

./: db.sqlite3  filetest.txt  manage.py  pyproject.toml
server/settings/: common.py
studsite/: asgi.py  settings.py
studsite/studsite/: settings.py  urls.py  wsgi.py
